// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionMessage /> renders AddKey 1`] = `
Array [
  "New key added for ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
  ": ed25519:BgXFiJS...",
  <p>
    with permission undefined
     and nounce undefined
  </p>,
]
`;

exports[`<ActionMessage /> renders CreateAccount 1`] = `
Array [
  "New account created: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders DeleteAccount 1`] = `
Array [
  "Account deleted: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders DeleteKey 1`] = `"Key deleted: ed25519:BgXFiJS..."`;

exports[`<ActionMessage /> renders DeployContract 1`] = `
Array [
  "Contract deployed: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders FunctionCall 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;

exports[`<ActionMessage /> renders FunctionCall with details 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <a
    className="account-link"
    href="/accounts/receiver2.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver2.test
  </a>,
  <dl>
    <dt>
      Arguments:
    </dt>
    <dd>
      <div>
        <div
          style={
            Object {
              "display": "block",
              "height": "0px",
              "overflow": "hidden",
            }
          }
        >
          <textarea
            className="jsx-2493677144 code-preview"
            readOnly={true}
            value="{
  \\"text\\": \\"when ico?\\"
}"
          />
        </div>
        <div
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "float": "left",
              }
            }
          >
            Show more
          </div>
        </div>
      </div>
    </dd>
  </dl>,
]
`;

exports[`<ActionMessage /> renders Stake 1`] = `
Array [
  "Staked: ",
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    &lt;0.00001
     Ⓝ
  </span>,
  " ",
  "with ed25519:BgXFiJS...",
]
`;

exports[`<ActionMessage /> renders Transfer 1`] = `
Array [
  "Transferred ",
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    &lt;0.00001
     Ⓝ
  </span>,
  " to ",
  <a
    className="account-link"
    href="/accounts/receiver.test"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    receiver.test
  </a>,
]
`;
